# config-mapper

./: .gitignore  LICENSE  flake.nix  haskell-playground.cabal  invertedMap.json
app/: Main.hs
src/: ConfigMapper.hs
test/: ConfigMapperSpec.hs
