cabal-version: 3.4
name:          haskell-playground
version:       0.1.0.0
author:        Stephen Onnen
maintainer:    stephen.onnen@gmail.com
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

common warnings
  ghc-options: -Wall

library config-mapper
  import:           warnings
  exposed-modules:  ConfigMapper
  hs-source-dirs:   src
  build-depends:
    , base        ^>=4.19.1.0
    , containers  ^>=0.6.8

  default-language: GHC2021

executable haskell-playground
  import:           warnings
  main-is:          Main.hs
  other-extensions: OverloadedStrings
  build-depends:
    , aeson                             ^>=2.2.3.0
    , base                              ^>=4.19.1.0
    , bytestring                        ^>=0.12.1.0
    , containers                        ^>=0.6.8
    , haskell-playground:config-mapper

  hs-source-dirs:   app
  default-language: GHC2021

test-suite spec
  import:             warnings
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:
    , base                              ^>=4.19.1.0
    , containers                        ^>=0.6.8
    , haskell-playground:config-mapper
    , hspec
    , hspec-discover

  other-modules:      ConfigMapperSpec
  default-language:   GHC2021
  build-tool-depends: hspec-discover:hspec-discover >=2 && <3
